styling, coupon and winning logic pre-test

--- a/public/stylesheets/miniCheckbox.css
+++ b/public/stylesheets/miniCheckbox.css
@@ -51,7 +51,8 @@
 }
 
 .miniCheckbox input:checked ~ .checkmark {
-    background-color: #536D79;
+    /*background-color: #536D79;*/
+    background-color: #00bd4f;
 }
 
 /* Show the checkmark when checked */
