--- a/public/stylesheets/miniSelect.css
+++ b/public/stylesheets/miniSelect.css
@@ -8,7 +8,8 @@
   display: none; /*hide original SELECT element:*/
 }
 .miniSelect-selected {
-  background-color: #536D79;
+  /*background-color: #536D79;*/
+  background-color: #3872da;
   color: white;
   font-weight: 600;
 }
@@ -40,7 +41,8 @@
 }
 
 .miniSelect-items div {
-  color: #444;
+  /*color: #444;*/
+  color: #3872da;
 }
 
 /*style items (options):*/
@@ -53,7 +55,8 @@
   z-index: 99;
   max-height: 350px;
   overflow-y: auto;
-  border: 1px solid #536D79;
+  /*border: 1px solid #536D79;*/
+  border: 1px solid #3872da;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
 }
