--- a/public/stylesheets/regForm.css
+++ b/public/stylesheets/regForm.css
@@ -53,3 +53,20 @@
   animation: appearIn 0.3s linear;
   display: none;
 }
+
+#regButtons button, #submitBtn {
+  background-color: #00bd4f;
+  border: none;
+  color: white;
+  padding: 6px 15px;
+  font-size: 18px;
+  border-radius: 6px;
+  width: 150px;
+  margin-top: 15px;
+  margin-bottom: 5px;
+}
+
+#regButtons button:hover, #submitBtn:hover {
+  cursor: pointer;
+  background-color: #00984f;
+}
