--- a/public/stylesheets/regForm.css
+++ b/public/stylesheets/regForm.css
@@ -30,6 +30,18 @@
   display: none;
 }
 
+#emailInput {
+  width: 100%;
+  display: block;
+  margin: 5px auto;
+  max-width: 250px;
+  border-radius: 4px;
+  border: 1px solid #aaa;
+  padding: 8px 0px;
+  padding-left: 8px;
+  box-sizing: border-box;
+}
+
 #regWorking.form-loader {
   position: static;
   transform: none;
