--- a/public/stylesheets/regForm.css
+++ b/public/stylesheets/regForm.css
@@ -33,7 +33,7 @@
 #emailInput {
   width: 100%;
   display: block;
-  margin: 5px auto;
+  margin: 5px auto 15px;
   max-width: 250px;
   border-radius: 4px;
   border: 1px solid #aaa;
@@ -74,7 +74,7 @@
   font-size: 18px;
   border-radius: 6px;
   width: 150px;
-  margin-top: 15px;
+  margin-top: 7px;
   margin-bottom: 5px;
 }
 
