--- a/public/stylesheets/regForm.css
+++ b/public/stylesheets/regForm.css
@@ -38,10 +38,14 @@
   }
 }
 
+.campaignInfo {
+  padding: 5px 0px;
+}
+
 #formSecWrapper {
     position: relative;
     width: 100%;
-    height: 210px;
+    height: 230px;
 }
 
 .modal-content #doneSec, .modal-content #regSec {
